assets/css/style.css
/* Author : Adedokun julius Ayobami */

body{
	font-family: sans-serif;
	background-color: black;
}

#slider_image, .image{
	width: 100%;
	height: 100%;
}

.about-title{
	text-transform: uppercase;
	letter-spacing: 5px;
	font-weight: bolder;
}

.about-us{
	color: grey;
	font-weight: lighter;
}

.shop{
	text-transform: uppercase;
	letter-spacing: 8px;
	word-spacing: 6px;
	font-weight: bold;
	margin-top: 8px;
}

#details{
	color: grey;
}

a{
	color: white;
	text-decoration: none;
}

.arrow-bg{
	background-color: black;
	width: 134px;
	display: flex;
}

.arrows{
	width: 67px;
	height: 66px;
	display: block;
	background-color: black;
	display: inline-block;
}

.arrows:hover{
	background-color:grey;
}

.nav-item{
	display: inline;
	padding-right: 1%;
	color: white;
}

.brand-name{
	font-size: 24px;
	padding-right: 3%;
	display: inline;
	color: white;
}

.about-us-div{
	width: 96%;
	background-color: white;
	padding: 2%;
}

.top-section{
	width: 100%;
}

@media screen and ( max-width: 500px ){

	.small-screen-none{
		display: none;
	}

	#slider_div{
		width: 100%;
		height: 300px;
	}

	#our_services_div{
		width: 100%;
		height: 370px;
		background-color: white;
	}

	.our_services{
		height: 292px;
		padding: 2%;
	}

	.navigation{
		position: fixed;
		width: 100%;
		top: 7px;
		left: -4%;
	}

	#title{
		font-size: 30px;
	}

	.bottom-section{
		width: 100%;
	}

	.image-div{
		width: 100%;
		height: 270px;
	}
}

@media screen and ( min-width: 501px ){

	.small-screen-none{
		display: none;
	}

	#slider_div{
		width: 100%;
		height: 400px;
	}

	#our_services_div{
		width: 100%;
		height: 367px;
		background-color: white;
	}

	.our_services{
		height: 280px;
		padding: 2%;
	}

	.navigation{
		position: fixed;
		width: 100%;
		top: 10px;
	}

	#title{
		font-size: 40px;
	}
}

@media screen and ( min-width: 800px ){

	.top-section{
		width: 100%;
		display: flex;
	}

	#slider_div{
		width: 55%;
		height: 470px;
	}

	#our_services_div{
		width: 45%;
		height: 470px;
		background-color: white;
	}

	.our_services{
		height: 394px;
		padding: 10px 0px 0px 35px;
	}

	.brand-name{
		font-size: 24px;
		padding-right: 4%;
		display: inline;
		color: white;
	}

	.navigation{
		position: fixed;
		width: 100%;
		top: 20px;
	}

	#title{
		font-size: 37px;
	}

	.bottom-section{
		width: 100%;
		display: flex;
	}

	.about-us-div{
		width: 32%;
		height: 300px;
		background-color: white;
	}

	.about-us{
		color: grey;
		font-weight: lighter;
	}

	.image-div{
		width: 32%;
		height: 331px;
	}
}

@media screen and ( min-width: 1200px ){

	#slider_div{
		width: 60%;
		height: 471px;
	}

	#our_services_div{
		width: 40%;
		height: 471px;
		background-color: white;
	}

	.our_services{
		height: 350px;
		padding: 55px 0px 0px 60px;
	}

	.about-us-div{
		width: 32%;
		background-color: white;
		padding: 20px 40px 1px 50px;
	}

	.image-div{
		width: 31%;
		height: 321px;
	}
}

